Fix many refactoring bugs

--- a/Resources/views/Message/listRemoved.html.twig
+++ b/Resources/views/Message/listRemoved.html.twig
@@ -40,7 +40,7 @@
 {% from _self import renderPager %}
 {% from _self import displayControls %}
 
-{% extends 'ClarolineCoreBundle:Message:layout.html.twig' %}
+{% extends 'ClarolineMessageBundle:Message:layout.html.twig' %}
 
 {% block title %}{{ 'messages_removed' | trans({}, 'platform') | striptags | raw }}{% endblock %}
 
