--- a/Resources/views/Message/show.html.twig
+++ b/Resources/views/Message/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'ClarolineCoreBundle:Message:layout.html.twig' %}
+{% extends 'ClarolineMessageBundle:Message:layout.html.twig' %}
 
 {% block title %}{% spaceless %}
     {% if ancestors | length >= 1 %}
