--- a/Resources/views/Message/listReceived.html.twig
+++ b/Resources/views/Message/listReceived.html.twig
@@ -37,7 +37,7 @@
 {% from _self import renderPager %}
 {% from _self import displayControls %}
 
-{% extends 'ClarolineCoreBundle:Message:layout.html.twig' %}
+{% extends 'ClarolineMessageBundle:Message:layout.html.twig' %}
 
 {% block title %}{{ 'messages_received' | trans({}, 'platform') | striptags | raw }}{% endblock %}
 
